fix queue processing + add md5 when uploading

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ node_modules
 
 # config
 environment.dev.ts
+apps/desktop/src/environments/environment.ts
 apps/**/local-stage/*.json
 
 # IDE - VSCode
