--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ node_modules
 
 # config
 environment.dev.ts
-apps/desktop/src/environments/environment.ts
+environment.ts
 apps/**/local-stage/*.json
 
 # IDE - VSCode
