--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -289,18 +289,24 @@ jobs:
         with:
           name: latest
           tag_name: latest
-          files: dist/executables/*.dmg
+          files: |
+            dist/executables/*.dmg
+            dist/executables/latest-*.yml
       - name: Release Windows installer
         uses: softprops/action-gh-release@v1
         if: startsWith(matrix.os, 'windows')
         with:
           name: latest
           tag_name: latest
-          files: dist/executables/*.exe
+          files: |
+            dist/executables/*.exe
+            dist/executables/latest-*.yml
       - name: Release Linux installer
         uses: softprops/action-gh-release@v1
         if: startsWith(matrix.os, 'ubuntu')
         with:
           name: latest
           tag_name: latest
-          files: dist/executables/*.snap
+          files: |
+            dist/executables/*.snap
+            dist/executables/latest-*.yml
