--- a/angular.json
+++ b/angular.json
@@ -163,74 +163,6 @@
       },
       "tags": []
     },
-    "desktop-electron": {
-      "root": "apps/desktop/electron",
-      "sourceRoot": "apps/desktop/electron/src",
-      "projectType": "application",
-      "architect": {
-        "build": {
-          "builder": "nx-electron:build",
-          "outputs": ["{options.outputPath}"],
-          "options": {
-            "outputPath": "dist/apps/desktop-electron",
-            "main": "apps/desktop/electron/src/main.ts",
-            "tsConfig": "apps/desktop/electron/tsconfig.app.json",
-            "assets": ["apps/desktop/electron/src/assets"]
-          },
-          "configurations": {
-            "production": {
-              "optimization": true,
-              "extractLicenses": true,
-              "inspect": false,
-              "fileReplacements": [
-                {
-                  "replace": "apps/desktop/electron/src/environments/environment.ts",
-                  "with": "apps/desktop/electron/src/environments/environment.prod.ts"
-                }
-              ]
-            }
-          }
-        },
-        "serve": {
-          "builder": "nx-electron:execute",
-          "options": {
-            "buildTarget": "desktop-electron:build"
-          }
-        },
-        "package": {
-          "builder": "nx-electron:package",
-          "options": {
-            "name": "desktop-electron",
-            "frontendProject": "desktop",
-            "outputPath": "dist/packages",
-            "prepackageOnly": true
-          }
-        },
-        "make": {
-          "builder": "nx-electron:make",
-          "options": {
-            "name": "desktop-electron",
-            "frontendProject": "desktop",
-            "outputPath": "dist/executables"
-          }
-        },
-        "lint": {
-          "builder": "@nrwl/linter:eslint",
-          "outputs": ["{options.outputFile}"],
-          "options": {
-            "lintFilePatterns": ["apps/desktop/electron/**/*.ts"]
-          }
-        },
-        "test": {
-          "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/apps/desktop/electron"],
-          "options": {
-            "jestConfig": "apps/desktop/electron/jest.config.js",
-            "passWithNoTests": true
-          }
-        }
-      }
-    },
     "auth": {
       "projectType": "library",
       "root": "libs/auth",
@@ -462,6 +394,74 @@
         }
       },
       "tags": []
+    },
+    "desktop-electron": {
+      "root": "apps/desktop/electron",
+      "sourceRoot": "apps/desktop/electron/src",
+      "projectType": "application",
+      "architect": {
+        "build": {
+          "builder": "nx-electron:build",
+          "outputs": ["{options.outputPath}"],
+          "options": {
+            "outputPath": "dist/apps/desktop-electron",
+            "main": "apps/desktop/electron/src/main.ts",
+            "tsConfig": "apps/desktop/electron/tsconfig.app.json",
+            "assets": ["apps/desktop/electron/src/assets"]
+          },
+          "configurations": {
+            "production": {
+              "optimization": true,
+              "extractLicenses": true,
+              "inspect": false,
+              "fileReplacements": [
+                {
+                  "replace": "apps/desktop/electron/src/environments/environment.ts",
+                  "with": "apps/desktop/electron/src/environments/environment.prod.ts"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "nx-electron:execute",
+          "options": {
+            "buildTarget": "desktop-electron:build"
+          }
+        },
+        "package": {
+          "builder": "nx-electron:package",
+          "options": {
+            "name": "desktop-electron",
+            "frontendProject": "desktop",
+            "outputPath": "dist/packages",
+            "prepackageOnly": true
+          }
+        },
+        "make": {
+          "builder": "nx-electron:make",
+          "options": {
+            "name": "desktop-electron",
+            "frontendProject": "desktop",
+            "outputPath": "dist/executables"
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "outputs": ["{options.outputFile}"],
+          "options": {
+            "lintFilePatterns": ["apps/desktop/electron/**/*.ts"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/apps/desktop/electron"],
+          "options": {
+            "jestConfig": "apps/desktop/electron/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      }
     },
     "login-login": {
       "projectType": "application",
@@ -1035,23 +1035,29 @@
           }
         }
       }
-    }
-  },
-  "schematics": {
-    "@nrwl/angular:application": {
-      "style": "scss",
-      "linter": "eslint",
-      "unitTestRunner": "jest",
-      "e2eTestRunner": "cypress"
     },
-    "@nrwl/angular:library": {
-      "style": "scss",
-      "linter": "eslint",
-      "unitTestRunner": "jest"
-    },
-    "@nrwl/angular:component": {
-      "style": "scss",
-      "changeDetection": "OnPush"
+    "sistema": {
+      "projectType": "library",
+      "root": "libs/sistema",
+      "sourceRoot": "libs/sistema/src",
+      "prefix": "nsi",
+      "architect": {
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/sistema"],
+          "options": {
+            "jestConfig": "libs/sistema/jest.config.js",
+            "passWithNoTests": true
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": ["libs/sistema/src/**/*.ts", "libs/sistema/src/**/*.html"]
+          }
+        }
+      },
+      "tags": []
     }
   }
 }
