--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@angular/router": "13.2.0",
     "@angular/service-worker": "13.2.0",
     "@angular/youtube-player": "^11.2.11",
+    "@ng-web-apis/common": "^2.0.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "@nxext/vite": "^13.2.1",
@@ -69,6 +70,7 @@
     "core-js": "^3.6.4",
     "crypto": "^1.0.1",
     "d3": "^5.15.0",
+    "date-fns": "^2.28.0",
     "electron-updater": "^5.0.1",
     "fuse.js": "^3.6.1",
     "latinize": "^0.5.0",
