Exclude sistema-demo from github workflow for now

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,10 +54,10 @@ jobs:
         run: yarn --prefer-offline
 
       - name: Unit tests
-        run: npx nx affected --target=test --parallel=3 --exclude=sdk-demo,search-widget-demo,auth,core
+        run: npx nx affected --target=test --parallel=3 --exclude=sdk-demo,search-widget-demo,auth,core,sistema-demo
 
       - name: Build affected apps
-        run: npx nx affected --target=build --parallel=3 -c production --exclude=sdk-demo,search-widget-demo,sdk-core
+        run: npx nx affected --target=build --parallel=3 -c production --exclude=sdk-demo,search-widget-demo,sdk-core,sistema-demo
 
       - name: Check apps to deploy
         id: check-deploy
