do not build sdk on Windows to avoid error when building electron app on Windows

--- a/angular.json
+++ b/angular.json
@@ -659,7 +659,7 @@
         "build": {
           "builder": "@nrwl/workspace:run-commands",
           "options": {
-            "commands": ["yarn sdk:build"]
+            "commands": ["yarn sdk-build"]
           }
         },
         "lint": {
