--- a/package.json
+++ b/package.json
@@ -126,7 +126,7 @@
     "@tsconfig/svelte": "^2.0.1",
     "@types/core-js": "^2.5.4",
     "@types/d3": "^5.16.3",
-    "@types/gapi": "^0.0.41",
+    "@types/gapi": "^0.0.42",
     "@types/gapi.auth2": "^0.0.56",
     "@types/gapi.client.drive": "^3.0.13",
     "@types/jasmine": "3.6.11",
@@ -135,6 +135,7 @@
     "@types/latinize": "^0.2.15",
     "@types/lru-cache": "^5.1.0",
     "@types/node": "^15.6.1",
+    "@types/node-static": "^0.7.7",
     "@types/perfect-scrollbar": "^1.3.0",
     "@types/quill": "^2.0.4",
     "@types/spark-md5": "^3.0.2",
