--- a/package.json
+++ b/package.json
@@ -47,18 +47,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "13.2.0",
-    "@angular/cdk": "13.2.0",
-    "@angular/common": "13.2.0",
-    "@angular/compiler": "13.2.0",
-    "@angular/core": "13.2.0",
+    "@angular/animations": "13.3.11",
+    "@angular/cdk": "13.3.9",
+    "@angular/common": "13.3.11",
+    "@angular/compiler": "13.3.11",
+    "@angular/core": "13.3.11",
     "@angular/flex-layout": "^13.0.0-beta.37",
-    "@angular/forms": "13.2.0",
-    "@angular/material": "13.2.0",
-    "@angular/platform-browser": "13.2.0",
-    "@angular/platform-browser-dynamic": "13.2.0",
-    "@angular/router": "13.2.0",
-    "@angular/service-worker": "13.2.0",
+    "@angular/forms": "13.3.11",
+    "@angular/material": "13.3.9",
+    "@angular/platform-browser": "13.3.11",
+    "@angular/platform-browser-dynamic": "13.3.11",
+    "@angular/router": "13.3.11",
+    "@angular/service-worker": "13.3.11",
     "@angular/youtube-player": "^11.2.11",
     "@ng-web-apis/common": "^2.0.0",
     "@ngx-translate/core": "^14.0.0",
@@ -99,24 +99,23 @@
     "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "13.2.1",
+    "@angular-devkit/build-angular": "13.3.8",
     "@angular-eslint/eslint-plugin": "~13.0.1",
     "@angular-eslint/eslint-plugin-template": "~13.0.1",
     "@angular-eslint/schematics": "13.2.1",
     "@angular-eslint/template-parser": "~13.0.1",
-    "@angular/cli": "13.2.1",
-    "@angular/compiler-cli": "13.2.0",
-    "@angular/language-service": "13.2.0",
+    "@angular/cli": "13.3.8",
+    "@angular/compiler-cli": "13.3.11",
+    "@angular/language-service": "13.3.11",
     "@biesbjerg/ngx-translate-extract": "^7.0.2",
-    "@nrwl/angular": "13.7.1",
-    "@nrwl/cli": "13.7.1",
-    "@nrwl/eslint-plugin-nx": "13.7.1",
-    "@nrwl/jest": "13.7.1",
-    "@nrwl/js": "13.7.1",
-    "@nrwl/linter": "13.7.1",
-    "@nrwl/node": "13.7.1",
-    "@nrwl/tao": "13.7.1",
-    "@nrwl/workspace": "13.7.1",
+    "@nrwl/angular": "13.10.1",
+    "@nrwl/cli": "13.10.1",
+    "@nrwl/eslint-plugin-nx": "13.10.1",
+    "@nrwl/jest": "13.10.1",
+    "@nrwl/js": "13.10.1",
+    "@nrwl/linter": "13.10.1",
+    "@nrwl/node": "13.10.1",
+    "@nrwl/workspace": "13.10.1",
     "@nxext/svelte": "^13.1.3",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.0",
@@ -141,30 +140,32 @@
     "@types/uuid": "^8.3.0",
     "@types/z-schema": "^3.24.0",
     "@types/zone.js": "^0.5.12",
-    "@typescript-eslint/eslint-plugin": "5.10.2",
-    "@typescript-eslint/parser": "5.10.2",
+    "@typescript-eslint/eslint-plugin": "5.18.0",
+    "@typescript-eslint/parser": "5.18.0",
     "codelyzer": "6.0.2",
     "crypto-browserify": "^3.12.0",
     "dotenv": "10.0.0",
     "electron": "^17.0.0",
     "electron-builder": "^23.0.2",
     "electron-notarize": "^1.2.1",
-    "eslint": "8.7.0",
+    "eslint": "8.12.0",
     "eslint-config-prettier": "6.0.0",
     "eslint-plugin-svelte3": "^3.2.1",
     "exitzero": "^1.0.1",
-    "jasmine-core": "3.6.0",
+    "jasmine-core": "3.10.1",
     "jasmine-spec-reporter": "5.0.2",
     "jest": "27.2.3",
-    "jest-preset-angular": "11.0.0",
+    "jest-preset-angular": "11.1.1",
     "jsrsasign": "^10.1.0",
-    "karma": "^6.3.12",
+    "karma": "6.3.20",
     "karma-chrome-launcher": "3.1.0",
+    "karma-coverage": "~2.2.0",
     "karma-coverage-istanbul-reporter": "3.0.3",
     "karma-jasmine": "4.0.1",
-    "karma-jasmine-html-reporter": "1.5.4",
-    "ng-packagr": "13.2.1",
+    "karma-jasmine-html-reporter": "1.7.0",
+    "ng-packagr": "13.3.1",
     "ngx-build-plus": "11.0.0",
+    "nx": "13.10.1",
     "nx-electron": "^13.0.0",
     "postcss": "^8.3.9",
     "postcss-import": "^14.0.2",
@@ -184,7 +185,7 @@
     "ts-jest": "27.0.5",
     "ts-node": "9.1.1",
     "tslint": "6.1.3",
-    "typescript": "4.5.5",
+    "typescript": "4.6.4",
     "vite": "2.7.13"
   }
 }
