--- a/package.json
+++ b/package.json
@@ -108,14 +108,14 @@
     "@angular/compiler-cli": "13.3.11",
     "@angular/language-service": "13.3.11",
     "@biesbjerg/ngx-translate-extract": "^7.0.2",
-    "@nrwl/angular": "13.10.1",
-    "@nrwl/cli": "13.10.1",
-    "@nrwl/eslint-plugin-nx": "13.10.1",
-    "@nrwl/jest": "13.10.1",
-    "@nrwl/js": "13.10.1",
-    "@nrwl/linter": "13.10.1",
-    "@nrwl/node": "13.10.1",
-    "@nrwl/workspace": "13.10.1",
+    "@nrwl/angular": "14.1.9",
+    "@nrwl/cli": "14.1.9",
+    "@nrwl/eslint-plugin-nx": "14.1.9",
+    "@nrwl/jest": "14.1.9",
+    "@nrwl/js": "14.1.9",
+    "@nrwl/linter": "14.1.9",
+    "@nrwl/node": "14.1.9",
+    "@nrwl/workspace": "14.1.9",
     "@nxext/svelte": "^13.1.3",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.0",
@@ -129,7 +129,7 @@
     "@types/gapi.auth2": "^0.0.56",
     "@types/gapi.client.drive": "^3.0.13",
     "@types/jasmine": "3.6.11",
-    "@types/jest": "27.0.2",
+    "@types/jest": "27.4.1",
     "@types/jexl": "^2.2.0",
     "@types/latinize": "^0.2.15",
     "@types/lru-cache": "^5.1.0",
@@ -154,7 +154,7 @@
     "exitzero": "^1.0.1",
     "jasmine-core": "3.10.1",
     "jasmine-spec-reporter": "5.0.2",
-    "jest": "27.2.3",
+    "jest": "27.5.1",
     "jest-preset-angular": "11.1.1",
     "jsrsasign": "^10.1.0",
     "karma": "6.3.20",
@@ -165,12 +165,12 @@
     "karma-jasmine-html-reporter": "1.7.0",
     "ng-packagr": "13.3.1",
     "ngx-build-plus": "11.0.0",
-    "nx": "13.10.1",
+    "nx": "14.1.9",
     "nx-electron": "^13.0.0",
     "postcss": "^8.3.9",
-    "postcss-import": "^14.0.2",
-    "postcss-preset-env": "^6.7.0",
-    "postcss-url": "^10.1.1",
+    "postcss-import": "14.1.0",
+    "postcss-preset-env": "7.5.0",
+    "postcss-url": "10.1.3",
     "prettier": "2.5.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.66.0",
@@ -182,10 +182,11 @@
     "svelte-check": "^1.4.0",
     "svelte-jester": "^1.3.2",
     "svelte-preprocess": "^4.9.8",
-    "ts-jest": "27.0.5",
+    "ts-jest": "27.1.4",
     "ts-node": "9.1.1",
     "tslint": "6.1.3",
     "typescript": "4.6.4",
     "vite": "2.7.13"
   }
 }
+
